# bookalert

./: Dockerfile  bookalert.service  cli.py  config.py  daemon.py  db.py  docker-compose.yml  notifier.py  pyproject.toml  readme.md  scraper.py  web.py
static/: fonts.css
templates/: _poll_done.html  _poll_pending.html  _target_display.html  _target_edit.html  add.html  alerts.html  base.html  books.html  history.html  pending.html
