[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookalert"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "rich>=13.0",
    "playwright>=1.40",
    "flask>=3.0",
]

[project.scripts]
bookalert = "cli:main"

[tool.setuptools]
py-modules = ["cli", "config", "db", "scraper", "notifier", "daemon", "web"]
